# Changelog

## [unreleased]

## [1.1.3]
- Upgrade to electron 12

## [1.1.2]
- Assume undefined labels are at address 0 [#33](/../../issues/33)
- Made generated mapping labels random
- Made default format Sonic 1

## [1.1.1]
- allow closing a project when a broken one has been loaded

## [1.1.0]
- Export spritesheet

## [1.0.0]
- New engine
    - Real custom mappings & DPLCs
    - Support for custom art formats (including compression)
    - Support for custom palette formats
    - Sonic 2 Special Stage added [#21](/../../issues/21)
    - Sonic 3&K Sonic/Supersonic partial support
- New ASM parser/writer
    - Wider compatibility
    - Ability to provide a custom parser
- Added File tab
    - Create new files
    - Save/Load individual assets
    - Art offset [#15](/../../issues/15)
    - Blank entries in palette line
    - Various UX improvements for file input
- Rebuilt Project tab
    - Tree structure for projects
    - Reuse file menu
- Mapping tab updates
    - New mapping autodismiss is configurable
    - Added 'close' to new mapping / raw editor
- Sprites tab now autozooms depending on sprite size
- Fixed a keycombination event bug [#29](/../../issues/29)
- Fixed corrupted art when importing transparent PNGs [#22](/../../issues/22)
- Performance improvements to remove lag
- Created project files for s1disasm, s2disasm

This release contains a breaking change: Project files from previous versions will work, but game format will have to be reselected as it cannot be migrated.

## [0.0.8]
- Changed default palette from Sonic 2 to the SCH unified palette
- Fixed a bug that allows deleting mappings in drawing mode
- Fixed a bug where up/down scrolls when there are active mappings
- Fixed Kosinski-M compression
- Added KosinskiPlus compression
- Rebuilt colour picker

## [0.0.7]
- Added changelog
- Better error reporting & enabled devtools (F12)
- Compression now based on flamewing's mdcomp
    - Uses WASM and is much faster